# scratchpad

./: CLAUDE.md  LICENSE  README.md
back-end/fast-api/web-sockets/: README.md
data/spark/graphx/: README.md  distances.ipynb  lol-items.ipynb
data/spark/graphx/.docs/: graphs.excalidraw
data/spark/high-order-functions/: README.md  main.py
data/spark/positional-file/: README.md  main.scala  run.sh
data/taxi-app/: .gitignore  CLAUDE.md  README.md  app.py  app.yaml  main.py  pyproject.toml  requirements.txt
data/taxi-app/.docs/: why-databricks-apps.md
data/taxi-app/.docs/spec-docs/: 001-infrastructure.md  002-data-pipeline.md  003-api.md  004-web-app.md
data/taxi-app/.spec-docs/: 002-data-pipeline.md  003-api.md  004-web-app.md
data/taxi-app/api/: db.py  models.py  routes.py
data/taxi-app/pipeline/: gold_nyctaxi_trips.sql
data/taxi-app/pipelines/: gold_nyctaxi_trips.sql
data/taxi-app/scripts/: deploy.sh  gold_nyctaxi_trips.sql
data/taxi-app/static/: app.js  index.html  style.css
data/taxi-app/tests/: test_app.py
front-end/dag-visualizer/: README.md  app.css  index.html
misc/elk-app/: README.md
misc/python/: decorator.py  is-using-venv.py
spark/: Discovery - Liquid Clustering.ipynb
web-apps/dag-visualizer/: README.md  app.js
