[project]
name = "taxi-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn==0.46.0",
    "databricks-sql-connector==4.2.6",
    "pydantic==2.13.4",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "httpx2==2.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
